--- a/css/Style.css
+++ b/css/Style.css
@@ -93,7 +93,7 @@ nav .wrapper{
   list-style: none;
 }
 .nav-links li a{
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
@@ -166,7 +166,7 @@ nav .wrapper{
 .row .mega-links li a{
   padding: 0px;
   padding: 0 20px;
-  color: white;
+  color: black;
   font-size: 16px;
   display: block;
 }
@@ -317,7 +317,7 @@ nav .wrapper{
     max-width: 350px;
     top: 0;
     left: -100%;
-    background: transparent;
+    background: white;
     display: block;
     padding: 50px 10px;
     line-height: 50px;
@@ -373,7 +373,7 @@ nav .wrapper{
   }
   .nav-links .mobile-item{
     display: block;
-    color: white;
+    color: black;
     font-size: 20px;
     font-weight: 500;
     padding-left: 20px;
@@ -473,6 +473,11 @@ nav input{
     top: 14px;
     right: -2px;
     
+  }
+
+  #mobile_change{
+    width: 100% !important;
+    padding: 25px !important;
   }
 
 }
